# if-letters-home-could-sing

./: .gitignore  .gitmodules  .python-version  AGENTS.md  Dockerfile  README.md  calibrate_rm.py  capture_rm.py  casia-hwdb.ipynb  cluster.py  config.py  document.py  draw.js  draw_rm.py  draw_rm_old.py  font.py  font_analysis_results.txt  gui.py  hanzi_drawer.py  index.html  main.py  modal_train_radicals.py  model.py  ocr.ipynb  preproc.py  preproc_combined.py  preproc_notebook.ipynb  preproc_train.py  preproc_utils.py  preprocessing.py  pyproject.toml  radicals.py  requirements-legacy.txt  requirements.txt  sample.py  save_casia.py  save_hit.py  save_rm.py  sys_font_analysis_results.txt  train_local.py  (+3 more)
.agent/: autopilot.yaml  commands.yaml  deploy.yaml  env.md  merge-policy.yaml  pr-policy.yaml  storage.yaml  verify.md
astro/: Dockerfile  requirements.txt
config/: settings.yaml
contracts/: native-notebook-api.ferrari-3.28.0.162.json  render-profiles.json  review.example.json  session.example.json
dags/: elt.py
device_installer/: __init__.py  __main__.py  appload_runtime.py  fake_device.py  installer.py  release.py  trial_plan.py
docs/: architecture.md  definition-of-done.md  experience-core.md  installer-recovery.md  issue-approval.md  mac-bridge.md  paper-pro-hardware-trial.md  privacy-data-flow.md  product-brief.md  tablet-simulator.md  toolbar-launcher.md
experience_core/: __init__.py  contracts.py  privacy.py  reviewer.py  state_machine.py
fixtures/: README.md
frontend/: README.md  next.config.mjs  package-lock.json  package.json  start.sh
heart_rate/: __init__.py  ble.py  capture.py  mock.py  models.py  whoop.py
helpers/: config.py  s3.py
mac_bridge/: server.py  (+12 more)
(+239 files in other folders)
